[package]
name = "socketbridge"
version = "1.0.1"
edition = "2021"

description = "A bridge application for AF_UNIX and TCP sockets."
authors = ["Michael Schulte"]
license = "MIT"
repository = "https://github.com/michael72/socketbridge"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
